# jobdb

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  container.yml
docker/: entrypoint
jobdb/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
jobdb/api/: auth.py  filters.py  serializers.py  urls.py  views.py
jobdb/main/: admin.py  apps.py  fields.py  filters.py  forms.py  models.py  query.py  resources.py  tables.py  urls.py  utils.py  views.py
jobdb/main/fixtures/: test-data.yaml
jobdb/main/management/commands/: check_posting_urls.py
jobdb/main/migrations/: 0001_initial.py  0002_alter_application_applied_and_more.py  0002_alter_company_careers_url_and_more.py  0002_application_single_application_per_user_posting.py  0003_alter_application_applied.py  0003_alter_posting_location_alter_posting_title_and_more.py  0003_apikey.py  0004_company_priority.py  0004_user_linkedin_user_phone.py  0005_company_careers_urls_posting_job_board_urls.py  0005_posting_in_wa.py  0006_alter_application_posting_alter_application_user_and_more.py  0006_company_employees_est_num_and_more.py  0007_apikey_comment.py  0007_company_filed.py  0008_alter_application_applied.py
jobdb/main/static/admin/: bootstrap-admin.css
jobdb/main/static/main/: main.css  table.css
jobdb/main/templates/admin/: base_site.html  my_action_confirmation.html
jobdb/main/templates/main/: base.html  base_header.html  bootstrap_htmx.html  bulk_add_postings.html  company_table_htmx.html  form.html  form_url_open_link_widget.html  index.html  table_htmx.html  user_profile_form.html
jobdb/main/templates/registration/: base.html  login.html  password_change_done.html  password_change_form.html  password_reset_done.html  password_reset_form.html
jobdb/main/templates/rest_framework/: api.html
jobdb/settings/: base.py  dev.py  email.py  env.py  production.py
jobdb/templates/: base.html  index.html
jobdb/templates/registration/: login.html
jobdb/utils/: context_processors.py
jobdb/web/: apps.py  views.py
tests/: conftest.py  test_api.py  test_import_export.py  test_module.py  test_query.py  test_utils.py  test_views.py
