[build-system]
requires = ["poetry-core>=1.2.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "jobdb"
version = "0.0.0"
description = "Jobs database"
license = "GPL-3.0-or-later"
authors = ["Stephen Kent <smkent@smkent.net>"]
readme = "README.md"
repository = "https://github.com/smkent/jobdb"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-stubs = {extras = ["compatible-mypy"], version = "^5.0.2"}
django-extensions = "^3.2.3"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"
djangorestframework = "^3.15.2"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.15.0"}
drf-spectacular = "^0.27.2"
django-filter = "^24.2"
drf-link-header-pagination = "^0.2.0"
drf-problems = "^1.0.5"
django-tables2 = "^2.7.0"
django-htmx = "^1.18.0"
django-crispy-forms = "^2.2"
django-bootstrap5 = "^24.2"
crispy-bootstrap5 = "^2024.2"
tablib = {extras = ["all"], version = "^3.6.1"}
pytest-django = "^4.8.0"

[tool.poetry.dev-dependencies]
bandit = {extras = ["toml"], version = "*"}
black = "*"
cruft = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-pyproject = "*"
flake8-simplify = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
poethepoet = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-github-actions-annotate-failures = "*"
pytest-sugar = "*"

[tool.poetry.scripts]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poe.tasks.lint]
cmd = "pre-commit run --all-files --show-diff-on-failure"
help = "Check all files"

[tool.poe.tasks.pytest]
cmd = "pytest"
help = "Run unit tests with pytest"

[tool.poe.tasks.test]
sequence = ["lint", "pytest"]
help = "Run all tests"

[tool.bandit]
skips = ["B101", "B404"]  # assert_used, subprocess module

[tool.black]
line-length = 79

[tool.coverage.run]
source = ["jobdb"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.cruft]
skip = [".git"]

[tool.flake8]
exclude = "./.*"

[tool.isort]
atomic = true
profile = "black"
line_length = 79

[tool.mypy]
files = [ "tests", "jobdb" ]
mypy_path = "types"
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = """\
    --cov \
    --cov-append \
    --cov-report term \
    --cov-report xml:.pytest_coverage.xml \
    --junitxml=.pytest_results.xml \
"""
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango60Warning",
]
DJANGO_SETTINGS_MODULE = "jobdb.settings.dev"

# vim: ft=cfg
